@@ -8,7 +8,7 @@
 -- module_init: ajout des magic textual description associées au module, allocation de la structure spécifique et initialisation [OK]
 -- table de hachage: magic_desc -> GPtrArray de module *, trier le GPtrArray par poids du module [OK]
 
-- ajouter scan d'un fichier en utilisant libmagic (retrouver la liste des magic_file dans fix-extension.sh)
+- ajouter scan d'un fichier en utilisant libmagic (retrouver la liste des magic_file dans fix-extension.sh) [OK]
 
 - ajouter modules de scans: module 4, module 5.2, module 5.1/clamav
 
